	tests/hierarchy/gnetlistrc, tests/hierarchy/gnetlistrc.hierarchy:
	Fixed the gnetlist regressions tests to work with make distcheck.

	* tests/spice-sdb/run_tests.sh: Added -I "gnetlist -g" to the 
	golden file diff to ignore the embedded command line information
	in the spice-sdb golden files.

	* scheme/gnet-calay.scm: Added backed written by John Doty for
	the Calay netlist. Thanks!

2007-04-21 Stuart Brorson   <sdb@cloud9.net>
	* tests/spice-sdb/*  Added new spice-sdb test directory.  Then
	created test environment similar to Dan's regression tests for
	refdes_renum.
	
2007-02-20 Carlos Nieves Onega <cnieves@iespana.es>

	* scheme/gnet-allegro.scm: Fix bug #1663729.
	  When writing the device files, check if 'devfiles' directory 
	  exists and create it if needed.

2007-02-16 Ales Hvezda   <ahvezda@geda.seul.org>

	* tests/multiequal.spice-sdb: Updated golden file to be current.

	* tests/Makefile.am, tests/drc2/Makefile.am,
	tests/hierarchy/Makefile.am: Temporarily disabled make check to
	get past make distcheck.  The rules in make tests are probably
	missing a variable specifying the source of the input files.
	make check should enabled once we figure out what is missing.

	* tests/amp.spice-sdb, tests/darlington.spice-sdb: Updated golden	
	files to be current.

2007-02-11 (later) Stuart Brorson   <sdb@cloud9.net>
	* scheme/gnet-spice-sdb.scm, scheme/gnetlist.scm: Changed 
	string-pad-right to safe-string-head per suggestion from Jeff
	Mallatt.  Added safe-string-head to gnetlist.scm.
	
2007-02-11 Stuart Brorson   <sdb@cloud9.net>
	* scheme/gnet-spice-sdb.scm: Incorporated patch from Jeff Mallatt
	enabling SPICE netlisting of slotted parts.
	
2007-02-10 Ales Hvezda   <ahvezda@geda.seul.org>

	* docs/gnetlist.1, src/gnetlist.c, src/parsecmd.c: Applied patch by
	Tomaz Solc [ 1593644 ] gnetlist: use "-g help" to list available
	backends. Thanks!

	* tests/.cvsignore: Added rule to ignore all the newly generated 
	files.
