@@ -11,7 +11,21 @@ export TESTDIR
 
 schbasename=`basename $INPUT .sch`
 
-gnetlist -o ${BUILDDIR}/new_${schbasename}.$BACKEND -g $BACKEND $INPUT 
+../src/gnetlist -o ${BUILDDIR}/new_${schbasename}.$BACKEND -g $BACKEND $INPUT 
+status=$?
+
+if [ "$status" != 0 ] 
+then
+	echo FAILED: gnetlist returned non-zero exit status
+	exit 1
+fi
 
 diff $EXTRADIFF ${SRCDIR}/${schbasename}.$BACKEND ${BUILDDIR}/new_${schbasename}.$BACKEND
+status=$?
+
+if [ "$status" != 0 ]
+then
+	exit 2
+fi
+
 
